--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+      @media(max-width: '400px') {
+        h1 {
+          font-size: 1rem;
+        }
+      }
+    </style>
   </head>
 
   <body>
